# til_2022

./: .gitignore
architecture_patterns_with_python/: README.md  abstraction_example.ipynb
architecture_patterns_with_python/chap01_domain_modeling/: README.md  model.py  value_object_example.py
architecture_patterns_with_python/chap02_repository/: README.md  model.py  test_allocate.py  test_orm.py  test_repository.py
architecture_patterns_with_python/chap03_abstractions/: READMD.md  sync.py  test_sync.py
architecture_patterns_with_python/chap04_service_layer/: READMD.md  conftest.py  flask_app.py  orm.py  repository.py  services.py  test_api.py  test_batches.py  test_services.py
architecture_patterns_with_python/chap05_high_gear_low_gear/: Dockerfile  Makefile
betterpython/: READMD.md
builtins/: pyproject.toml
dart/: future.dart  http_request.dart  pubspec.yaml
django/django_sentry/: manage.py  pyproject.toml
django/django_sentry/django_sentry/: asgi.py  settings.py  urls.py  wsgi.py
fluent_python/: README.md
java_gradle/: build.gradle  settings.gradle
modern_java_in_action/: .gitignore  READMD.md  settings.gradle
python-design-pattern/: factory.py  factory_method.py  healthcheck.py  lazy_singleton.py  meta_int.py  singleton.py  test_new.py  test_type.py
python/rp-poetry/: README.md  pyproject.toml  requirements.txt
refactoring_2e/: .flake8  project.toml  requirements.txt
sicp/: 1_2.scm  1_3.scm  1_4.scm  1_5.scm  READMD.md  newton_method.scm
spring_core/: custom_appconfig.py  pytest_scope.py
terraform/: READMD.md
(+330 files in other folders)
