[tool.poetry]
name = "django-sentry"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.4"


[tool.poetry.group.dev.dependencies]
sentry-sdk = "^1.29.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
